2007-02-16  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: dbd/mysql.scm
	  So now dbi-execute-using-connection fits behavior
	  of mysql-store-result.

	* Change: dbd_mysqllib.stub
	  Now mysql-store-result return <mysql-res> instance after
	  mysql-real-query "SELECT type" query, and #f after
	  mysql-real-query "Other type" query(INSERT/UPDATE and so on),
	  and raise <mysql-error> if any error occurred.

2007-02-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: dbd/mysql.scm
	  Export <mysql-error> and <mysql-stmt-error>.

	* Change: dbd_mysqllib.stub
	  Now mysql-real-query return #<undef> and raise <mysql-error>
	  if error occurred.

	* Change: test/dbi.scm, test/dbd.scm
	  Now test.scm is splitted into test/dbi.scm(via DBI test) and
	  test/dbd.scm(low level test/not implemented yet).

	* Fix: dbd_mysqllib.stub
	  Use SCM_STRING_BODY* API instead of Scm_GetStringConst and SCM_STRING_SIZE.

2007-01-17  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: Makefile.in
	  Delete VERSION and DIST_EXCLUDE_X only when invoke make maintainer-clean.

2007-01-16  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: Makefile.in
	  Add datarootdir definition.

2006-03-20  ENDO Yasuyuki <yasuyuki@javaopen.org>

	* release 0.2.2

2006-03-03 ENDO Yasuyuki <yasuyuki@javaopen.org>

	* dbd_mysqllib.stub (ER_ERROR_MESSAGES): comment out this entry, it's not exist mysql-5.0. 

2005-11-07  Shiro Kawai  <shiro@acm.org>

	* release 0.2.1

2005-11-06  Katsutoshi Itoh  <cut-sea@master.email.ne.jp>

	* modify include path of mysql.h.
	* move drop table test after all test before close db.
	  because if user environment has no test table, then error occured.

2005-11-04  Shiro Kawai  <shiro@acm.org>

	* release 0.2
	
	* configure.in, Makefile.in : adapted to prefix override, i.e.
	  you can pass --prefix (or --libdir/datadir) to configure to
	  customize where the module is installed.

2005-11-03  Shiro Kawai  <shiro@acm.org>

	* dbd/mysql.scm (<mysql-result-set>, referencer, relation-rows):