@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: dbd_mysql.h,v 1.9 2007/02/15 09:26:47 bizenn Exp $
+ * $Id: dbd_mysql.h,v 1.10 2007/02/16 06:57:28 bizenn Exp $
  */
 
 /* Prologue */
@@ -66,12 +66,16 @@ typedef ScmForeignPointer ScmMysqlStmt;
 extern int MysqlClosedP(ScmObj obj);
 extern void MysqlMarkClosed(ScmObj obj);
 
+extern ScmObj MysqlAffectedRows(MYSQL *handle);
 extern ScmObj MysqlFetchFieldNames(MYSQL_RES *result);
 extern ScmObj MysqlFetchRow(MYSQL_RES *result);
 
 extern void raise_mysql_error(MYSQL *handle, const char *msg);
-
 extern void raise_mysql_stmt_error(MYSQL_STMT *stmt, const char *msg);
+
+extern void mysql_cleanup(ScmObj obj);
+extern void mysql_res_cleanup(ScmObj obj);
+extern void mysql_stmt_cleanup(ScmObj obj);
 
 /* Epilogue */
 SCM_DECL_END
