@@ -1,4 +1,4 @@
-;;-*-Scheme-*-
+;;-*- mode: scheme -*-
 ;; mysqllib.stub - mysql driver stub
 ;;
 ;;  Copyright (c) 2003-2007 Scheme Arts, L.L.C., All rights reserved.
@@ -18,7 +18,7 @@
 ;; along with this program; if not, write to the Free Software
 ;; Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 ;;
-;; $Id: dbd_mysqllib.stub,v 1.11 2007/02/16 03:04:20 bizenn Exp $
+;; $Id: dbd_mysqllib.stub,v 1.12 2007/02/16 06:57:28 bizenn Exp $
 
 "
 #include \"dbd_mysql.h\"
@@ -65,6 +65,9 @@
 	"  raise_mysql_error(connection, \"mysql_real_query\");"
 	))
 
+(define-cproc mysql-affected-rows (connection::<mysql-handle>)
+  (call "MysqlAffectedRows"))
+
 (define-cproc mysql-real-escape-string (connection::<mysql-handle>
                                         string::<string>)
   (body "const ScmStringBody *body = SCM_STRING_BODY(string);"
@@ -96,35 +99,29 @@
 (define-cproc mysql-fetch-row (result::<mysql-res>)
   (call "MysqlFetchRow"))
 
-(define-cproc mysql-free-result (result::<mysql-res>)
-  (body <void>
-        "if (!MysqlClosedP(result_scm)) {"
-        "  mysql_free_result(result);"
-        "  MysqlMarkClosed(result_scm);"
-        "}"))
-
 (define-cproc mysql-close (connection::<mysql-handle>)
-  (body <void>
-        "if (!MysqlClosedP(connection_scm)) {"
-        "  mysql_close(connection);"
-        "  MysqlMarkClosed(connection_scm);"
-        "}"))
+  (body <void> "mysql_cleanup(connection_scm);"))
 
-(define-cproc mysql-stmt-init (connection::<mysql-handle>)
+(define-cproc mysql-free-result (result::<mysql-res>)
+  (body <void> "mysql_res_cleanup(result_scm);"))
+
+(define-cproc mysql-stmt-prepare (connection::<mysql-handle> sql::<string>)
   (body <mysql-stmt>
-	"SCM_RESULT = mysql_stmt_init(connection);"
-	"if (SCM_RESULT == NULL)"
-	"  raise_mysql_error(connection, \"mysql_stmt_init\");"
-	))
-
-(define-cproc mysql-stmt-prepare (stmt::<mysql-stmt> sql::<string>)
-  (body <void>
 	"const ScmStringBody *body = SCM_STRING_BODY(sql);"
 	"const char *q = SCM_STRING_BODY_START(body);"
 	"unsigned int size = SCM_STRING_BODY_SIZE(body);"
-	"if (mysql_stmt_prepare(stmt, q, size) != 0)"
-	"  raise_mysql_stmt_error(stmt, \"mysql_stmt_prepare\");"
+	"SCM_RESULT = mysql_stmt_init(connection);"
+	"if (SCM_RESULT == NULL)"
+	"  raise_mysql_error(connection, \"mysql_stmt_init\");"
+	"if (mysql_stmt_prepare(SCM_RESULT, q, size) != 0)"
+	"  raise_mysql_stmt_error(SCM_RESULT, \"mysql_stmt_prepare\");"
 	))
+
+(define-cproc mysql-stmt-close (stmt::<mysql-stmt>)
+  (body <void> "mysql_stmt_cleanup(stmt_scm);"))
+
+(define-cproc mysql-stmt-closed? (stmt::<mysql-stmt>)
+  (expr <boolean> "MysqlClosedP(stmt_scm)"))
 
 (define-cproc mysql-stmt-param-count (stmt::<mysql-stmt>)
   (call <ulong> "mysql_stmt_param_count"))
